--- a/lib/Screens/EMMI_HTML/index.html
+++ b/lib/Screens/EMMI_HTML/index.html
@@ -8,19 +8,19 @@
     <title>EMMI BOT Lite</title>
     <link rel="icon" type="image/png" href="media/logo.png">
 
-    <!-- Blockly -->
-    <script src="https://unpkg.com/blockly/blockly.min.js"></script>
+    <!-- Blockly (local) -->
+    <script src="lib/blockly/blockly.min.js"></script>
 
-    <!-- Prism.js for syntax highlighting - LIGHT theme -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-c.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-cpp.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-python.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-java.min.js"></script>
+    <!-- Prism.js for syntax highlighting - LIGHT theme (local) -->
+    <link href="lib/prism/themes/prism.min.css" rel="stylesheet">
+    <script src="lib/prism/prism.min.js"></script>
+    <script src="lib/prism/components/prism-c.min.js"></script>
+    <script src="lib/prism/components/prism-cpp.min.js"></script>
+    <script src="lib/prism/components/prism-python.min.js"></script>
+    <script src="lib/prism/components/prism-java.min.js"></script>
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Font Awesome (local) -->
+    <link rel="stylesheet" href="lib/font-awesome/css/all.min.css">
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="css/styles.css?v=25">
@@ -177,7 +177,8 @@
             </div>
         </div>
         <div class="chatbot-input-area">
-            <input id="ai-prompt-input" type="text" class="chatbot-input" placeholder="e.g. Blink red LED every 500ms...">
+            <input id="ai-prompt-input" type="text" class="chatbot-input"
+                placeholder="e.g. Blink red LED every 500ms...">
             <button id="btn-ai-generate" class="chatbot-send-btn" title="Generate">
                 <i class="fas fa-paper-plane"></i>
             </button>
@@ -224,9 +225,61 @@ void loop() {
 
     <!-- Hidden file input -->
     <input type="file" id="file-input" accept=".xml,.json,.bloc" style="display: none;">
-    <!-- Firmware Input: using visibility hidden instead of display none for better browser compatibility -->
-    <input type="file" id="firmware-input" accept=".bin"
-        style="position: absolute; visibility: hidden; width: 0; height: 0; opacity: 0;">
+    <!-- Firmware Update Modal -->
+    <div id="firmware-update-modal" class="modal hidden">
+        <div class="modal-content firmware-modal">
+            <div class="modal-header">
+                <h3><i class="fas fa-microchip"></i> Firmware Update</h3>
+                <button id="btn-close-firmware" class="btn-close">&times;</button>
+            </div>
+            <div class="firmware-body">
+                <!-- Version comparison cards -->
+                <div class="firmware-versions">
+                    <div class="firmware-version-card">
+                        <div class="firmware-version-icon installed">
+                            <i class="fas fa-hdd"></i>
+                        </div>
+                        <div class="firmware-version-label">Installed</div>
+                        <div id="firmware-installed-version" class="firmware-version-value installed">—</div>
+                    </div>
+                    <div class="firmware-version-arrow">
+                        <i class="fas fa-angles-right"></i>
+                    </div>
+                    <div class="firmware-version-card">
+                        <div class="firmware-version-icon available">
+                            <i class="fas fa-cloud-arrow-down"></i>
+                        </div>
+                        <div class="firmware-version-label">Available</div>
+                        <div id="firmware-available-version" class="firmware-version-value available">—</div>
+                    </div>
+                </div>
+
+                <!-- Status text -->
+                <div id="firmware-status-text" class="firmware-status"></div>
+
+                <!-- Progress bar -->
+                <div id="firmware-progress-container" class="firmware-progress-container" style="display: none;">
+                    <div class="firmware-progress-track">
+                        <div id="firmware-progress-bar" class="firmware-progress-fill"></div>
+                    </div>
+                    <div id="firmware-progress-text" class="firmware-progress-label">0%</div>
+                </div>
+
+                <!-- Log output -->
+                <div id="firmware-log" class="firmware-log" style="display: none;"></div>
+
+                <!-- Action buttons -->
+                <div class="firmware-actions">
+                    <button id="btn-firmware-cancel" class="firmware-btn firmware-btn-cancel">
+                        <i class="fas fa-xmark"></i> Cancel
+                    </button>
+                    <button id="btn-firmware-flash" class="firmware-btn firmware-btn-flash">
+                        <i class="fas fa-bolt"></i> Update Firmware
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Serial Monitor Modal -->
     <div id="serial-monitor-modal" class="modal hidden">
@@ -275,7 +328,9 @@ void loop() {
     <script src="js/generators/arduino.js"></script>
     <script src="js/generators/python.js"></script>
     <script src="js/generators/java.js"></script>
-    <script src="js/generators/emmi_exporter.js?v=22"></script>
+    <script src="js/commands/common_commands.js?v=2"></script>
+    <script src="js/commands/emmi-bot-v2_commands.js?v=2"></script>
+    <script src="js/generators/emmi_exporter.js?v=23"></script>
 
     <!-- Common/Core blocks -->
     <script src="js/toolbox.js?v=22"></script>
@@ -284,17 +339,11 @@ void loop() {
     <script src="blocks/communication_blocks.js?v=22"></script>
     <script src="blocks/emmi-bot-v2_blocks.js?v=20"></script>
     <script src="js/generators/variable_generators.js?v=20"></script>
-    <script src="js/generators/variable_generators_java.js?v=1"></script>
-    <script src="js/generators/variable_generators_python.js?v=1"></script>
     <script src="js/generators/communication_generators.js?v=21"></script>
-    <script src="js/generators/communication_generators_java.js?v=1"></script>
-    <script src="js/generators/communication_generators_python.js?v=1"></script>
-    <script src="js/generators/emmi-bot-v2_generators.js?v=20"></script>
-    <script src="js/generators/emmi-bot-v2_generators_java.js?v=1"></script>
-    <script src="js/generators/emmi-bot-v2_generators_python.js?v=1"></script>
+    <script src="js/generators/emmi-bot-v2_generators.js?v=21"></script>
     <script src="js/custom_styles.js"></script>
     <script src="js/blockly-mapper.js?v=1"></script>
-    <script src="js/app.js?v=29"></script>
+    <script src="js/app.js?v=31"></script>
 </body>
 
 </html>
