--- a/assets/antipython_web/settings.html
+++ b/assets/antipython_web/settings.html
@@ -76,31 +76,12 @@
         </a>
 
         <h1>Settings</h1>
-        <p style="margin-bottom: 2rem; color: var(--text-muted);">Configure your AI integration via OpenRouter.</p>
+        <p style="margin-bottom: 2rem; color: var(--text-muted);">AI is securely powered by your QubiQ account. No API
+            key required.</p>
 
-        <div class="form-group">
-            <label for="openrouter-key">OpenRouter API Key</label>
-            <div class="input-group">
-                <input type="password" id="openrouter-key" class="chat-input" placeholder="sk-or-v1-...">
-            </div>
-            <p class="help-text">
-                Your API key is stored locally in your browser and never sent to our servers.
-            </p>
-        </div>
+        <!-- Removed OpenRouter form groups -->
 
-        <div class="form-group">
-            <label for="openrouter-model">AI Model Name</label>
-            <div class="input-group">
-                <input type="text" id="openrouter-model" class="chat-input"
-                    placeholder="arcee-ai/trinity-large-preview:free">
-            </div>
-            <p class="help-text">
-                Common free models: arcee-ai/trinity-large-preview:free, google/gemini-2.0-flash-exp:free
-            </p>
-        </div>
-
-        <button class="btn btn-primary" id="save-settings" style="width: 100%; justify-content: center;">Save
-            Settings</button>
+        <!-- Removed Save Settings button since no other settings exist right now -->
 
         <div id="status-msg" style="padding: 1rem; border-radius: 8px; margin-top: 1rem;" class="hidden"></div>
     </div>
@@ -125,36 +106,7 @@
             lucide.createIcons();
         });
 
-        // Settings Logic
-        const keyInput = document.getElementById('openrouter-key');
-        const modelInput = document.getElementById('openrouter-model');
-        const saveBtn = document.getElementById('save-settings');
-        const statusMsg = document.getElementById('status-msg');
-
-        // Load existing settings
-        keyInput.value = localStorage.getItem('openrouter_api_key') || '';
-        modelInput.value = localStorage.getItem('openrouter_model') || 'arcee-ai/trinity-large-preview:free';
-
-        saveBtn.addEventListener('click', () => {
-            const key = keyInput.value.trim();
-            const model = modelInput.value.trim() || 'arcee-ai/trinity-large-preview:free';
-
-            if (key) {
-                localStorage.setItem('openrouter_api_key', key);
-                localStorage.setItem('openrouter_model', model);
-                statusMsg.textContent = 'Settings saved successfully!';
-                statusMsg.style.backgroundColor = 'var(--success-color)';
-            } else {
-                localStorage.removeItem('openrouter_api_key');
-                localStorage.setItem('openrouter_model', model);
-                statusMsg.textContent = 'API Key cleared, Model updated!';
-                statusMsg.style.backgroundColor = 'var(--secondary-color)';
-            }
-
-            statusMsg.style.color = 'white';
-            statusMsg.classList.remove('hidden');
-            setTimeout(() => statusMsg.classList.add('hidden'), 3000);
-        });
+        // Settings Logic removed since Auth is handled globally
     </script>
 </body>
 
